--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ NotEmpty.cliente.email= El Email del cliente es requerido -> Properties
 Email.cliente.email= La dirección de correo no es válida -> properties
 NotNull.cliente.createAt= La fecha no puede ser nula -> properties
 typeMismatch.cliente.createAt= Formato de la fechas es ivalido, debe ser: yyyy-MM-dd
+NotEmpty.factura.descripcion= Este campo no puede ser vacia!
