--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,3 +2,5 @@ text.cliente.nombre = Vorname
 text.cliente.apellido = Nachnate
 text.cliente.email = E-mail
 text.cliente.createAt = Date-A
+
+text.cliente.listar.titulo= Kundenliste
