--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -10,3 +10,5 @@ text.cliente.nombre = Nombre
 text.cliente.apellido = Apellido
 text.cliente.email = Correo
 text.cliente.createAt = Fecha
+
+text.cliente.listar.titulo= Listado de Clientes
