Añadiendo menu desplegable de idiomas y traduciendo texto paginador

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -4,3 +4,14 @@ text.cliente.email = E-mail
 text.cliente.createAt = Date-A
 
 text.cliente.listar.titulo= Kundenliste
+
+text.locale.language=  Sprache
+
+text.locale.es= Spanisch
+text.locale.en= Englisch
+text.locale.de= Deutsche
+
+text.paginator.first=Zuerst
+text.paginator.last=Letzte
+text.paginator.previous=pppp
+text.paginator.next=aaaa
