--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,3 +4,14 @@ text.cliente.email = Email
 text.cliente.createAt = Date
 
 text.cliente.listar.titulo= Customer list
+
+text.locale.language= Language
+
+text.locale.es= Spanish
+text.locale.en= English
+text.locale.de= German
+
+text.paginator.first=first
+text.paginator.last=last
+text.paginator.previous=previous
+text.paginator.next=next
