--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -12,3 +12,14 @@ text.cliente.email = Correo
 text.cliente.createAt = Fecha
 
 text.cliente.listar.titulo= Listado de Clientes
+
+text.locale.language= Lenguaje
+
+text.locale.es=Español
+text.locale.en=Ingles
+text.locale.de=Aleman
+
+text.paginator.first=Primera
+text.paginator.last=Ultima
+text.paginator.previous=Anterior
+text.paginator.next=Siguiente
