--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,3 +15,10 @@ text.paginator.first=first
 text.paginator.last=last
 text.paginator.previous=previous
 text.paginator.next=next
+
+text.factura.ver.datos.factura=Datos de la Factura(EN)
+text.factura.ver.datos.cliente= Datos del Cliente(EN)
+
+text.cliente.factura.folio = Folio(EN)
+text.cliente.factura.descripcion= Descripcion(EN)
+text.cliente.factura.fecha= Fecha(EN)
