--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -23,3 +23,10 @@ text.paginator.first=Primera
 text.paginator.last=Ultima
 text.paginator.previous=Anterior
 text.paginator.next=Siguiente
+
+text.factura.ver.datos.factura=Datos de la Factura
+text.factura.ver.datos.cliente= Datos del Cliente
+
+text.cliente.factura.folio = Folio
+text.cliente.factura.descripcion= Descripcion
+text.cliente.factura.fecha= Fecha
